--- a/force-app/main/default/lwc/.eslintrc.json
+++ b/force-app/main/default/lwc/.eslintrc.json
@@ -7,7 +7,7 @@
         "@lwc/lwc/no-unexpected-wire-adapter-usages": "off"
       },
       "env": {
-        "node": true
+        "node": false
       }
     }
   ]
